# bot_long

./: .gitignore  .gitmodules  Dockerfile  Procfile  bot_long.py  docker-compose.yml  examer.py  imap.py  keyboard.py  pyproject.toml  requirements.txt  sep.py  setup.cfg  t.txt
app/: logger.py  main.py  settings.py
app/api/: router.py
app/bot/: bot.py  handlers.py
app/examer/: controller.py  exception.py  schemas.py
