[tool.poetry]
name = "bot-examer"
version = "1.0.0"
description = ""
authors = ["Kiruha01 <liss-2001g@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "~0.115.0"
aiogram = "~3.13.1"
pydantic-settings = "~2.5.2"
uvicorn = "^0.31.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
autoflake = "~2.3.1"
black = "~24.10.0"
isort = "~5.13.2"
mypy = "~1.11.2"
bandit = "^1.7.10"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
